# SupremeFTP

./: .gitignore  CMakeLists.txt  README.md
Mario/: CMakeLists.txt  bible.txt  client  client.cpp  server  server.cpp  source.txt
include/: CMakeLists.txt
include/NetworkAnalyzer/: NetworkAnalyzer.h
include/ReadFile/: ReadFile.h
src/: CMakeLists.txt  NetworkAnalyzer.cc  ReadFile.cc
test/: CMakeLists.txt  client.cc  fatclient.cc  main.cc  selectSocket.cc  server.cc  udpclient.cc
test/multithread_sample/: tcpclient.cc
